# cat-watcher

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml.template  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/: architecture.md  gpu-slicing.md  homeassistant.md  kubernetes.md
homeassistant/: configuration.example.yaml
homeassistant/blueprints/: cat_behavior_alert.yaml  cat_door_waiting.yaml  cat_feeding_monitor.yaml  cat_health_monitor.yaml
homeassistant/lovelace/: dashboard.yaml
k8s/: configmap.yaml.template  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secrets.yaml.template  service.yaml  web-deployment.yaml
src/cat_watcher/: __init__.py  cli.py  config.py  logging_config.py  schemas.py
src/cat_watcher/collection/: __init__.py  storage.py
src/cat_watcher/detection/: __init__.py  behavior_inference.py  cat_detector.py  event_manager.py  pipeline.py  service.py  stream.py  tracker.py
src/cat_watcher/homeassistant/: __init__.py  discovery.py  publisher.py
src/cat_watcher/inference/: __init__.py  api.py  app.py  detector.py  identifier.py  pipeline.py
src/cat_watcher/labeling/: __init__.py  api.py  app.py
src/cat_watcher/labeling/static/: index.html
src/cat_watcher/mqtt/: __init__.py  publisher.py
src/cat_watcher/training/: __init__.py  behavior.py  cat_id.py  dataset.py
src/cat_watcher/web/: __init__.py  app.py
src/cat_watcher/web/routes/: __init__.py  dashboard.py  detection.py  labeling.py  prepare.py  training.py
src/cat_watcher/web/static/: index.html
tests/: conftest.py  test_collection_storage.py  test_inference_api.py  test_inference_pipeline.py  test_labeling_api.py  test_training_behavior.py  test_training_catid.py  test_training_dataset.py
tests/integration/: __init__.py  conftest.py  test_e2e_pipeline.py  test_homeassistant_integration.py
tests/unit/: test_homeassistant.py
